--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav li {
 nav li a {
     display: block;
     color: #AB0090;
-    font-family: Czcionka;
+    font-family: 'Czcionka';
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
